--- a/csharp/device/NuGet/Microsoft.Azure.Devices.Client.nuspec
+++ b/csharp/device/NuGet/Microsoft.Azure.Devices.Client.nuspec
@@ -62,15 +62,21 @@
                 <dependency id="PCLCrypto" version="1.0.86" />
                 <dependency id="Validation" version="2.2.8" />
             </group>
+            <group targetFramework="netstandard1.3">
+                <dependency id="Microsoft.NETCore.Portable.Compatibility" version="1.0.1" />
+                <dependency id="NETStandard.Library" version="1.6.0" />
+                <dependency id="Newtonsoft.Json" version="9.0.1" />
+			</group>
         </dependencies>
     </metadata>
     <files>
         <file src="..\thirdpartynotice.txt" target="thirdpartynotice.txt" />
-        <file src="..\Microsoft.Azure.Devices.Client\bin\release_delay_sign\Microsoft.Azure.Devices.Client.dll" target="lib\net45\Microsoft.Azure.Devices.Client.dll" />
-        <file src="..\Microsoft.Azure.Devices.Client.WinRT\bin\release_delay_sign\Microsoft.Azure.Devices.Client.winmd" target="lib\uap10.0\Microsoft.Azure.Devices.Client.winmd" />
-        <file src="..\Microsoft.Azure.Devices.Client.WinRT\bin\release_delay_sign\Microsoft.Azure.Devices.Client.winmd" target="lib\native\" />
+        <file src="..\Microsoft.Azure.Devices.Client\bin\release\Microsoft.Azure.Devices.Client.dll" target="lib\net45\Microsoft.Azure.Devices.Client.dll" />
+        <file src="..\Microsoft.Azure.Devices.Client.WinRT\bin\release\Microsoft.Azure.Devices.Client.winmd" target="lib\uap10.0\Microsoft.Azure.Devices.Client.winmd" />
+        <file src="..\Microsoft.Azure.Devices.Client.WinRT\bin\release\Microsoft.Azure.Devices.Client.winmd" target="lib\native\" />
+        <file src="..\Microsoft.Azure.Devices.Client.DotNetCore\bin\release\Microsoft.Azure.Devices.Client.DotNetCore.dll" target="lib\netstandard1.3" />
 
-        <file src="..\Microsoft.Azure.Devices.Client.PCL\bin\release_delay_sign\Microsoft.Azure.Devices.Client.PCL.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Microsoft.Azure.Devices.Client.PCL.dll" />
+        <file src="..\Microsoft.Azure.Devices.Client.PCL\bin\release\Microsoft.Azure.Devices.Client.PCL.dll" target="lib\portable-net45+wp8+wpa81+win8+MonoAndroid10+MonoTouch10+Xamarin.iOS10+UAP10\Microsoft.Azure.Devices.Client.PCL.dll" />
 
         <!-- don't forget about the .targets file containing the reference -->
         <file src="Microsoft.Azure.Devices.Client.targets" target="build\native\" />
